time format is refactored
